--- a/src/components/PrivacyPolicy.css
+++ b/src/components/PrivacyPolicy.css
@@ -1,4 +1,3 @@
-/* Existing styles... */
 .privacy-container {
     width: 100%;
     margin: 0;
@@ -7,7 +6,7 @@
     font-family: 'Inter', sans-serif;
     color: #334155;
     background-color: #ffffff;
-    min-height: 100vh;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
